# lab1

./: .gitignore  README.md  collection.py  config.py  model.py  model_service.py  pyproject.toml  runner.py
