[tool.poetry]
name = "lab1"
version = "0.1.0"
description = "basic ML training pipelin"
authors = ["Aleksandr Glushkovskiy <aglushkovskiy@ecisys.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
torch = "2.2.2"
torchvision = "^0.17"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
